--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,11 @@
   box-sizing: border-box;
 }
 
-html, body {
+body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, {
   margin: 0;
+  height: 100;
 }
+
 
 
 /* --------- CORE ---------  */
